SERVER-9267 Make readonly v8 objects use same getters as regular lazy objects

Also fixes SERVER-9251